# magic-rs

./: Cargo.toml  shuttle_setup_container.sh
src/: admin.rs  events.rs  latex.rs  main.rs  misc.rs
