[package]
name = "magic-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
grep = "0.3"
poise = "0.6"
image = "0.25"
tracing = "0.1"
sysinfo = "0.36"
subprocess = "0.2"
pdf2image-alt = "0.3"
shuttle-runtime = "0.56"
shuttle-serenity = "0.56"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart"] }
